<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">강남대학교 시간표</string>
    <string name="action_settings">설정</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login_blank_title">알림</string>
    <string name="login_blank_msg">아이디 혹은 비밀번호를 입력해 주세요.</string>
    <string name="login_blank_confirm">확인</string>
    <string name="login_fail_msg">로그인에 실패하였습니다.</string>
    <string name="login_btn_msg">로그인</string>
    <string name="login_edittext_id_msg">학번</string>
    <string name="login_edittext_pw_msg">비밀번호</string>
    <string name="login_login_txt">로그인 Login</string>
    <string name="login_login_working">로그인 중입니다.</string>
    <string name="menu_logout">로그아웃</string>
    <string name="SETTING_LOGOUT_MESSAGE">정말로 로그아웃 하시겠습니까?</string>
    <string name="SETTING_LOTOUT_OK">확인</string>
    <string name="SETTING_LOGOUT_CANCEL">취소</string>
    <string name="DAY_monday">월요일</string>
    <string name="DAY_tuesday">화요일</string>
    <string name="DAY_wendsday">수요일</string>
    <string name="DAY_thursday">목요일</string>
    <string name="DAY_friday">금요일</string>
    <string name="DAY_saturday">토요일</string>
    <string name="DAY_sunday">일요일</string>
    <string name="DAY_GONGGANG">오늘은 공강입니다.!</string>
    <string name="SETTING_ACCOUT_CATEGORY">계정 설정</string>
    <string name="SETTING_ACCOUT_NAME">학생 이름</string>
    <string name="SETTING_ACCOUT_NULLNAME">NULL</string>
    <string name="SETTING_TIMETABLE_CATEGORY">시간표 설정</string>
    <string name="SETTING_TIMETABLE_LIST_CATEGORY">리스트 시간표 설정</string>
    <string name="SETTING_TIMETABLE_TABLE_CATEGORY">표 시간표 설정</string>
    <string name="SETTING_TIMETABLE_STARTDAY_TITLE">어플 실행시 현재 요일의 시간표 보기.</string>
    <string name="SETTING_TIMETABLE_COLOR_MON">월요일 색상</string>
    <string name="SETTING_TIMETABLE_COLOR_TUE">화요일 색상</string>
    <string name="SETTING_TIMETABLE_COLOR_WEN">수요일 색상</string>
    <string name="SETTING_TIMETABLE_COLOR_THUR">목요일 색상</string>
    <string name="SETTING_TIMETABLE_COLOR_FIR">금요일 색상</string>
    <string name="SETTING_TIMETABLE_COLOR_SUMMARY">요일마다 변하는 색상을 설정합니다.</string>
    <string name="SETTING_TIMETABLE_GONGGANG_MESSAGE_TITLE">공강메세지 설정</string>
    <string name="SETTING_TIMETABLE_GONGGANG_MESSAGE_SUMMARY">공강일떄 뜨는 메세지를 설정합니다.</string>
    <string name="SETTING_TIMETABLE_WIDGET_CATEGORY">위젯 설정</string>
    <string name="SETTING_TIMETABLE_WIDGET_INTERVAL">위젯 업데이트 주기</string>
    <string name="SETTING_TIMETABLE_WIDGET_INTERVAL_1">1시간</string>
    <string name="SETTING_TIMETABLE_WIDGET_INTERVAL_6">6시간</string>
    <string name="SETTING_TIMETABLE_WIDGET_INTERVAL_12">12시간</string>
    <string name="SETTING_TIMETABLE_WIDGET_INTERVAL_24">24시간</string>
    <string name="SETTING_TIMETABLE_REFRESH">새로고침</string>
    <string name="SETTING_TIMETABLE_REFRESH_DOING">새로고침 중입니다...</string>
    <string name="SETTING_TIMETABLE_REFRESH_SUBTITLE">시간표를 새로고침 합니다.</string>
    <string name="SETTING_TIMETABLE_TEXT_SIZE">텍스트 크기</string>
    <string name="SETTING_TIMETABLE_TIME_TEXT_SIZE">시간 텍스트 크기</string>
    <string name="SETTING_TIMETABLE_CLASS_TEXT_SIZE">강의실 텍스트 크기</string>
    <string name="SETTING_TIMETABLE_SUBJECT_TEXT_SIZE">과목 텍스트 크기</string>
    <string name="SETTING_TIMETABLE_TEXT_SIZE_SUMMARY">시간표의 텍스트 크기를 조절합니다.</string>
    <string name="SETTING_TIMETABLE_TABLE_TEXT_SIZE_SUMMARY">시간표의 텍스트 크기를 조절합니다.</string>
    <string name="SETTING_WIDGET_TEXT_SIZE">위젯 텍스트 크기</string>
    <string name="SETTING_WIDGET_TEXT_COLOR">위젯 텍스트 색상</string>
    <string name="SETTING_WIDGET_TEXT_COLOR_SUMMARY">위젯 텍스트 색상을 설정합니다.</string>
    <string name="SETTING_WIDGET_UPDATE_TIME_FORMAT">yyyy년 MM월 dd일 HH시 mm분</string>
    <string name="SETTING_WIDGET_UPDATE_TIME_NODATA">위젯이 업데이트 된 적이 없습니다.</string>
    <string name="SETTING_WIDGET_UPDATE_TIME_TITLE">위젯 업데이트 시간</string>
    <string name="SETTING_WIDGET_BACKGROUND_COLOR">위젯 배경 색상</string>
    <string name="SETTING_WIDGET_BACKGROUND_COLOR_MSG">위젯 배경 색상을 설정합니다.</string>
    <string name="SETTING_RESET_TITLE">설정 초기화</string>
    <string name="SETTING_RESET_MSG">정말로 설정을 초기화 하시겠습니까?\n계정은 로그아웃 되지 않습니다.</string>
    <string name="SETTING_OK">예</string>
    <string name="SETTING_NO">아니요</string>
    <string name="SETTING_DEVELOPER_FEEDBACK_TITLE">어플리케이션 피드백</string>
    <string name="SETTING_DEVELOPER_FEEDBACK_SUMMARY">개발자에게 버그혹은 건의사항을 메일로 보냅니다.</string>
    <string name="SETTING_DEVELOPER_FEEDBACK_SUBJECT">강남대학교 시간표 피드백</string>
    <string name="SETTING_TIMETABLE_THEME_TITLE">테마설정</string>
    <string name="SETTING_TIMETABLE_THEME_SUMMARY">기본으로 제공하는 테마를 설정합니다.</string>
    <string name="SETTING_TIMETABLE_STYLE_TITLE">시간표 타입설정</string>
    <string name="DOUBLE_BACK_KILL_APP">뒤로가기키를 한번 더 눌러 종료해주세요.</string>
    <string name="SHARE_TIMETABLE_OK">공유</string>
    <string name="SHARE_TIMETABLE_CANCEL">취소</string>
    <string name="SHARE_TIMETABLE_TITLE">시간표 공유</string>
    <string name="CUSTOM_DIALOG_OK">확인</string>
    <string name="CUSTOM_DIALOG_TITLE">상세 정보</string>
    <string name="CUSTOM_DIALOG_SUBJECT_MSG">강의명 :</string>
    <string name="CUSTOM_DIALOG_CLASS_MSG">강의실 :</string>
    <string name="CUSTOM_DIALOG_TIME_MSG">강의시간 :</string>
    <string name="CUSTOM_DIALOG_NO_MAP_GEO">지도 정보가 없습니다.</string>
    <string name="CUSTOM_DIALOG_EXTRA_MSG">남은시간:</string>
    <string name="CUSTOM_DIALOG_SELECT_MAP_OK_MSG">확인</string>
    <string name="CUSTOM_DIALOG_SELECT_MAP_CANCEL_MSG">취소</string>
    <string name="CUSTOM_DIALOG_SELECT_MAP_NORMAL_MAP">일반지도로 보기</string>
    <string name="CUSTOM_DIALOG_SELECT_MAP_CAMPUS_MAP">캠퍼스지도로 보기</string>
    <string name="CAMPUS_MAP_WEBVIEW_TITLE">캠퍼스지도</string>
    <string name="CUSTOM_DIALOG_MAP">지도보기</string>
    <string name="CUSTOM_DIALOG_EXTRATIME">남은시간</string>
    <string name="Network_NotConnect_msg">네트워크에 연결되어있지 않습니다.</string>
    <string name="DEVELOPER_INFO_TITLE">개발자 정보</string>
    <string name="DEVELOPER_INFO_SUMMARY">개발자 정보를 봅니다.</string>
    <string name="DEVELOPER_INFO_HYEOK">권 혁 (컴퓨터 미디어 정보 공학부)\n페이스북 : http://facebook.com/Hyeok.G</string>
    <string name="DEVELOPER_INFO_MHWAN">배명환 (컴퓨터 미디어 정보 공학부)\n블로그 : http://blog.naver.com/bmhjlovef</string>
    <string name="MIDDLE_EXAM">중간고사</string>
    <string name="FINAL_EXAM">기말고사</string>
    <string name="dday_text">D</string>
    <string name="DDAY_TIME_TO_EXAM">시험기간 입니다</string>
    <string name="UNIV_SCHEDULE_WEBVIEW_TITLE">학사일정</string>
    <string name="MEMO_SAVE_MENU_TEXT">메모저장</string>
    <string name="MEMO_MAIN_TITLE">메모</string>
    <string name="MEMO_SAVE_MSG">메모가 저장되었습니다.</string>
    <string name="WRITE_MEMO_MSG">메모를 입력하세요.</string>
    <string name="EXTRA_TIME_MSG">Alarm\n\n</string>
    <string name="NO_CLASS_MSG">다음 수업이 없습니다.</string>
    <string name="NO_EXAM_DATA">시험 기간 정보가 없습니다.\n설정에 들어가 새로고침 해주세요.</string>
    <!-- Color Picker Preference -->
    <string name="press_color_to_apply">색상을 누르면 적용됩니다.</string>
    <string name="dialog_color_picker">색상 선택기</string>
    <string name="title_activity_extra_time">ExtraTime</string>
    <!-- Map Activity -->
    <string name="title_activity_maps">Map</string>
    <string name="MAP_LOCATION_OFF">위치설정이 꺼져있습니다.\n위치사용을 활성화 시켜주세요.</string>
    <string name="MAP_SHARE_TEXT">%1$s\n%2$s</string>
    <string name="EXTRATIME_TEXT">%1$S일 %2$s시간 %3$S분</string>
    <string name="EXTRATIME_SHARE_TEXT">%1$S\n%2$S\n%3$S\n다음 수업까지 %4$S 남았습니다.</string>
    <string name="MAIN_ALARM_TITLE">Alarm</string>
    <string name="MAIN_SHUTTLE_TITLE">Shuttle Bus</string>
    <!-- Drawer Layout -->
    <string name="DRAWER_SHARE">공유</string>
    <string name="DRAWER_SETTING">설정</string>
</resources>