<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/login_layout" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="#ffffffff"
            android:ems="10"
            android:hint="@string/login_edittext_id_msg"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="#ffffffff"
            android:ems="10"
            android:hint="@string/login_edittext_pw_msg"
            android:inputType="textPassword"
            android:singleLine="true" />

        <com.hyeok.kangnamunivtimetable.IButton
            xmlns:ibutton="http://schemas.android.com/apk/res/com.hyeok.kangnamunivtimetable"
            android:id="@+id/login_loginbtn1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_btn"
            android:gravity="center"
            ibutton:button_text_bold="true"
            ibutton:button_center="true"
            ibutton:button_text="@string/login_btn_msg"
            ibutton:button_icon="@drawable/ic_login_login" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_kangnam_logo" />

</RelativeLayout>