<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_round_corner"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/dialog_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/CUSTOM_DIALOG_TITLE"
            android:textSize="20sp" />

        <View
            android:id="@+id/dialog_divider"
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/dialog_divider_drawable" />

        <TextView
            android:id="@+id/dialog_class_tv"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="강의명"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_subject_class_tv"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#f0f0f0"
            android:gravity="center"
            android:text="강의실"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_time_tv"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="강의시간"
            android:textSize="18sp" />

        <View
            android:id="@id/dialog_divider"
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dialog_divider_drawable" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <com.hyeok.kangnamunivtimetable.IButton xmlns:ibutton="http://schemas.android.com/apk/res/com.hyeok.kangnamunivtimetable"
                android:id="@+id/dialog_map_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_map_drawable"
                ibutton:button_center="true"
                ibutton:button_icon="@drawable/ic_action_map"
                ibutton:button_text="@string/CUSTOM_DIALOG_MAP"
                ibutton:button_text_color="@color/dialog_map" />

            <com.hyeok.kangnamunivtimetable.IButton xmlns:ibutton="http://schemas.android.com/apk/res/com.hyeok.kangnamunivtimetable"
                android:id="@+id/dialog_extratime_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_extratime_drawable"
                ibutton:button_center="true"
                ibutton:button_icon="@drawable/ic_dialog_extratime"
                ibutton:button_text="@string/CUSTOM_DIALOG_EXTRATIME"
                ibutton:button_text_color="@color/dialog_extratime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/dialog_cancelbutton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/dialog_cancel_drawable"
                android:text="@string/CUSTOM_DIALOG_OK"
                android:textColor="@color/dialog_cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
